# CatchRobo2024_Visualization

./: .gitignore  README.md
tray_management/: package.xml  plugin.xml  setup.cfg  setup.py
tray_management/resource/: TrayManagementWidget.ui
tray_management/tray_management/: Main.py  main.py  tray_management.py  tray_management_widget.py
