<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>tray_management</name>
    <version>0.0.1</version>
    <description>CatchRobo2024 tray management visualization</description>
    <maintainer email="xinjia0104@gmail.com">root</maintainer>
    <license>Apache-2.0</license>

    <depend>rospy</depend>
    <depend>rqt_gui</depend>
    <depend>rqt_gui_py</depend>
    <depend version_gte="0.2.19">python_qt_binding</depend>
    <depend>python_qt_binding</depend>

    <export>
        <build_type>ament_python</build_type>
        <rqt_gui plugin="${prefix}/plugin.xml"/>
    </export>
</package>
